2002-08-12  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* file-io.cc (fopen_mode_to_ios_mode): Default value is std::ios::in.
	Return std::ios::openmode instead of int.

2002-08-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DLD-FUNCTIONS/dasrt.cc (DASRT_ABORT1, DASRT_ABORT2):
	"##" pastes tokens, not strings.

	* DLD-FUNCTIONS/odessa.cc: Add std:: qualifiers as needed.

2002-08-09  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* variables.cc (Fisglobal): Rename from Fis_global.
	* file-io.cc (Fisstream): Rename from Fis_stream.
	* data.cc (Fisbool): Rename from Fis_bool.
	(Fiscomplex): Rename from Fis_complex.
	(Fislist): Rename from Fis_list.
	(Fismatrix): Rename from Fis_matrix.
	(Fisstruct): Rename from Fis_struct.

	* parse.y (switch_case): Make list of command optional.

2002-08-08  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pr-output.cc (pr_max_internal): Use octave_is_NaN_or_NA instead
	of xisnan.
	(pr_min_internal): Likewise.
	(output_max_field_width): Likewise.
	(output_precision): Likewise.
	(pr_any_float): Handle NA.
	* mappers.cc (Fisna, F_is_nan_or_na): New functions.
	* data.cc (symbols_of_data): New constant, NA.

2002-08-07  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pt-binop.h (tree_binary_expression::is_binary_expression):
	New function, return true.
	(tree_boolean_expression::is_boolean_expression): New function,
	return true.
	* pt-exp.h (tree_expression::is_binary_expression): New function.
	(tree_expression::is_boolean_expression): Likewise.
	* parse.y (EXPR_OR_OR): Now lower precedence than EXPR_AND_AND.
	(EXPR_OR): Now lower precedence than EXPR_AND.
	(make_boolean_op): Maybe warn about change in precedence.
	(make_binary_op): Likewise.
	(Vwarn_precedence_change): New static variable.
	(warn_precedence_change): New function.
	(Vwarn_precedence_change): New DEFVAR.

2002-08-05  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* data.cc (ANY_ALL): Improve arg checks.

2002-08-04  John W. Eaton  <jwe@bevo.che.wisc.edu>
